crates/reinhardt-core/macros/tests/ui/hook/fail/hook_missing_eq.rs
use reinhardt_macros::hook;

#[hook(on runserver)]
struct MyHook;

fn main() {}
