crates/reinhardt-core/macros/tests/ui/hook/fail/hook_missing_eq.stderr
error: expected `=`
 --> tests/ui/hook/fail/hook_missing_eq.rs:3:11
  |
3 | #[hook(on runserver)]
  |           ^^^^^^^^^
